[tool.poetry]
name = "cu-feed-server"
version = "0"
description = "Find and Share your Curation on Feed to Fit like the Cupid, Cu-Feed"
authors = ["Taehyun Lee <0417taehyun@gmail.com>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pre-commit = "^2.16.0"
black = "^21.12b0"
flake8 = "^4.0.1"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.__pycache__
  | .env
  | .flake8
  | .gitignore
  | .pre-commit-config.yaml
  | poetry.lock
  | pyproject.toml
  | README.md
  | */__init__.py
)/
'''
